AI 实现管理界面 V3（自底向上完善了 Dao、Mapper、Repository）